--- a/math/index.html
+++ b/math/index.html
@@ -51,13 +51,11 @@
 			visibility: hidden;
 		}
 		
-		#status::after {
-			content: url("index.png");
-			position: absolute;
-			left: 0;
-			top: 0;
-			right: 0;
-			bottom: 0;
+		#status-splash {
+			width: auto;
+			max-width: 100%;
+			object-fit: contain;
+			visibility: visible;
 		}
 
 		#status-progress {
@@ -136,6 +134,7 @@
 		Please try updating or use a different browser.
 	</canvas>
 	<div id='status'>
+		<img id='status-splash' style='display: none;' oncontextmenu='event.preventDefault();' src='index.png' alt='splash screen'>
 		<div id='status-progress' style='display: none;' oncontextmenu='event.preventDefault();'><div id ='status-progress-inner'></div></div>
 		<div id='status-indeterminate' style='display: none;' oncontextmenu='event.preventDefault();'>
 			<div></div>
