--- a/math/index.html
+++ b/math/index.html
@@ -53,7 +53,7 @@
 		
 		#status-splash {
 			width: auto;
-			max-width: 100%;
+			max-height: 100%;
 			object-fit: contain;
 			visibility: visible;
 		}
@@ -134,7 +134,7 @@
 		Please try updating or use a different browser.
 	</canvas>
 	<div id='status'>
-		<img id='status-splash' style='display: none;' oncontextmenu='event.preventDefault();' src='index.png' alt='splash screen'>
+		<img id='status-splash' oncontextmenu='event.preventDefault();' src='index.png' alt='splash screen'>
 		<div id='status-progress' style='display: none;' oncontextmenu='event.preventDefault();'><div id ='status-progress-inner'></div></div>
 		<div id='status-indeterminate' style='display: none;' oncontextmenu='event.preventDefault();'>
 			<div></div>
