--- a/math/index.html
+++ b/math/index.html
@@ -59,6 +59,8 @@
 		}
 
 		#status-progress {
+			position: relative;
+			bottom: 16px;
 			width: 366px;
 			height: 7px;
 			background-color: #38363A;
@@ -134,7 +136,7 @@
 		Please try updating or use a different browser.
 	</canvas>
 	<div id='status'>
-		<img id='status-splash' oncontextmenu='event.preventDefault();' src='index.png' alt='splash screen'>
+		<img id='status-splash' style='display: none;' oncontextmenu='event.preventDefault();' src='index.png' alt='splash screen'>
 		<div id='status-progress' style='display: none;' oncontextmenu='event.preventDefault();'><div id ='status-progress-inner'></div></div>
 		<div id='status-indeterminate' style='display: none;' oncontextmenu='event.preventDefault();'>
 			<div></div>
@@ -158,6 +160,7 @@
 		(function() {
 			const INDETERMINATE_STATUS_STEP_MS = 100;
 			var statusProgress = document.getElementById('status-progress');
+			var statusSplash = document.getElementById('status-splash');
 			var statusProgressInner = document.getElementById('status-progress-inner');
 			var statusIndeterminate = document.getElementById('status-indeterminate');
 			var statusNotice = document.getElementById('status-notice');
@@ -176,7 +179,7 @@
 
 				if (statusMode === mode || !initializing)
 					return;
-				[statusProgress, statusIndeterminate, statusNotice].forEach(elem => {
+				[statusProgress, statusIndeterminate, statusNotice, statusSplash].forEach(elem => {
 					elem.style.display = 'none';
 				});
 				animationCallbacks = animationCallbacks.filter(function(value) {
@@ -185,6 +188,7 @@
 				switch (mode) {
 					case 'progress':
 						statusProgress.style.display = 'block';
+						statusSplash.style.display = 'block';
 						break;
 					case 'indeterminate':
 						statusIndeterminate.style.display = 'block';
