Deployment issue fix

--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <link rel="stylesheet" href="res/css/main.css" media="screen">
         <script>
-            GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":460656,"index.wasm":35708238},"focusCanvas":true,"gdextensionLibs":[]};
+            GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":460272,"index.wasm":35708238},"focusCanvas":true,"gdextensionLibs":[],"serviceWorker":"index.service.worker.js"};
         </script>
         <script src="res/js/main.js" defer></script>
     </head>
