Added temporary fix

--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -8,6 +8,7 @@
         <script>
             GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":506800,"index.wasm":35708238},"focusCanvas":true,"gdextensionLibs":[]};
         </script>
+        <script src="res/js/coi-serviceworker.min.js"></script>
         <script src="res/js/main.js" defer></script>
     </head>
     <body>
