--- a/stempro/index.html
+++ b/stempro/index.html
@@ -136,7 +136,7 @@
 		<div id='status-notice' class='godot' style='display: none;'></div>
 	</div>
 
-	<script type='text/javascript' src='index.js'></script>
+	<script type='text/javascript' src='index.js?202406230006'></script>
 	<script type='text/javascript'>//<![CDATA[
 
 		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":true,"fileSizes":{"index.pck":4466944,"index.wasm":13790961},"focusCanvas":true,"gdnativeLibs":[]};
