--- a/stempro/v2/index.html
+++ b/stempro/v2/index.html
@@ -146,18 +146,18 @@
 		</div>
 		<div id='status-notice' class='godot' style='display: none;'></div>
 	</div>
-	<div id="fill">
+	<!--div id="fill">
 		<input type="button" value="PLAY" onclick="play()">
-	</div>
+	</div-->
 
 	<script type='text/javascript' src='index.js'></script>
 	<script type='text/javascript'>//<![CDATA[
 
-		function play() {
+		/*function play() {
 			let canvas = document.getElementById("canvas");
 			canvas.requestFullscreen();
 			screen.orientation.lock("landscape");
-		}
+		}*/
 
 		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":364080,"index.wasm":17865444},"focusCanvas":true,"gdnativeLibs":[]};
 		var engine = new Engine(GODOT_CONFIG);
