--- a/stempro/v2/index.html
+++ b/stempro/v2/index.html
@@ -26,6 +26,17 @@
 			justify-content: center;
 			align-items: center;
 			pointer-events: all;
+			visibility: hidden;
+		}
+
+		#fill > #play-btn {
+			display: block;
+		}
+
+		#fill > #landscape-only {
+			display: none;
+			color: white;
+			font-family: sans-serif;
 		}
 
 		#canvas {
@@ -78,6 +89,14 @@
 		@media only screen and (orientation:portrait) {
 			#status-progress {
 				width: 61.8%;
+			}
+
+			#landscape-only {
+				display: block !important;
+			}
+
+			#play-btn {
+				display: none !important;
 			}
 		}
 
@@ -146,18 +165,19 @@
 		</div>
 		<div id='status-notice' class='godot' style='display: none;'></div>
 	</div>
-	<!--div id="fill">
-		<input type="button" value="PLAY" onclick="play()">
-	</div-->
+	<div id="fill">
+		<input type="button" value="PLAY" onclick="play()" id="play-btn">
+		<span id="landscape-only">Please rotate the screen.</span>
+	</div>
 
 	<script type='text/javascript' src='index.js'></script>
 	<script type='text/javascript'>//<![CDATA[
 
-		/*function play() {
+		function play() {
 			let canvas = document.getElementById("canvas");
 			canvas.requestFullscreen();
 			screen.orientation.lock("landscape");
-		}*/
+		}
 
 		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":364080,"index.wasm":17865444},"focusCanvas":true,"gdnativeLibs":[]};
 		var engine = new Engine(GODOT_CONFIG);
@@ -201,6 +221,7 @@
 						statusNotice.style.display = 'block';
 						break;
 					case 'hidden':
+						document.getElementById("fill").style.visibility = "visible";
 						break;
 					default:
 						throw new Error('Invalid status mode');
