--- a/stempro/v2/index.html
+++ b/stempro/v2/index.html
@@ -175,6 +175,13 @@
 
 	<script type='text/javascript' src='index.js'></script>
 	<script type='text/javascript'>//<![CDATA[
+		screen.orientation.addEventListener("change", () => {
+			if (screen.orientation.type.includes("portrait")) {
+				let canvas = document.getElementById("canvas");
+				canvas.exitFullscreen();
+			}
+		});
+
 		function play() {
 			let canvas = document.getElementById("canvas");
 			canvas.requestFullscreen().then(() => {
@@ -224,6 +231,7 @@
 						statusNotice.style.display = 'block';
 						break;
 					case 'hidden':
+						document.getElementById("fill").style.visibility = "visible";
 						break;
 					default:
 						throw new Error('Invalid status mode');
